[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/ChevalierIdle/frame0001.png" type="Texture" id=2]
[ext_resource path="res://Assets/ChevalierRun/frame0001.png" type="Texture" id=4]
[ext_resource path="res://Assets/ChevalierRun/frame0000.png" type="Texture" id=6]
[ext_resource path="res://Assets/ChevalierRun/frame0002.png" type="Texture" id=7]
[ext_resource path="res://Assets/ChevalierRun/frame0003.png" type="Texture" id=8]
[ext_resource path="res://Assets/ChevalierJumpFall/frame0002.png" type="Texture" id=9]
[ext_resource path="res://Assets/ChevalierJumpFall/frame0001.png" type="Texture" id=10]
[ext_resource path="res://Assets/ChevalierIdle/frame0000.png" type="Texture" id=11]
[ext_resource path="res://Assets/ChevalierIdle/frame0002.png" type="Texture" id=12]
[ext_resource path="res://Assets/ChevalierIdle/frame0003.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "falling",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "moving",
"speed": 9.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 117 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 2 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "moving"
playing = true
offset = Vector2( 40, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Head" type="Area2D" parent="."]
position = Vector2( 0, -120 )
__meta__ = {
"_edit_group_": true
}

[node name="HeadBody" type="CollisionShape2D" parent="Head"]
shape = SubResource( 3 )

[node name="Toes" type="Area2D" parent="."]
position = Vector2( 0, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Toes"]
shape = SubResource( 4 )
[connection signal="area_shape_entered" from="Head" to="." method="_on_Head_area_shape_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_exited" from="Head" to="." method="_on_Head_body_exited"]
[connection signal="body_entered" from="Toes" to="." method="_on_Toes_body_entered"]
[connection signal="body_exited" from="Toes" to="." method="_on_Toes_body_exited"]
